# llvm-ir

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  run_coverage.py  runtests.py  setup.py
ffi/: build.py  value.cpp
llvmir/: __init__.py  _version.py  block.py  builder.py  function.py  module.py  type.py  utils.py  value.py
llvmir/analysis/: __init__.py  def_use.py  manager.py
llvmir/binding/: analysis.py  executionengine.py  ffi.py  initfini.py  module.py  options.py  passmanagers.py  transforms.py
llvmir/tests/: __init__.py  __main__.py  test_binding.py
llvmlite/binding/: value.py
src/ffi/: build.py  value.cpp
src/llvmir/: __init__.py  block.py  builder.py  constant.py  function.py  instruction.py  module.py  type.py  typed.py  utils.py  value.py
src/llvmir/analysis/: __init__.py  cfg.py
src/llvmir/binding/: config.py  context.py  dylib.py  executionengine.py  ffi.py  initfini.py  linker.py  newpassmanagers.py  object_file.py  orcjit.py  targets.py  typeref.py  value.py
src/llvmir/passes/: __init__.py  cfg.py  constprop.py  manager.py
tests/: __init__.py  test_binding.py
